[package]
name = "http_server"
version = "0.1.0"
edition = "2021"
[dependencies]
# async
futures-lite = { version =  "2.3.0" }
async-io = "2.3.4"
async-executor = "1.13.0"
# http
http = "1.0.0"
# logging
log = "0.4.20"

[dev-dependencies]
# logging
env_logger = "0.11.5"
# async macros
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
# tradingview
tradingview_client = { git = "https://github.com/brandonros/tradingview_client.git", rev = "f69512a2a60110a906ee9ea48040a249b256f6d1" }
# json
miniserde = "0.1.40"
