[package]
name = "http_server"
version = "0.1.0"
edition = "2021"
[dependencies]
# async
futures-lite = { version =  "2.3.0" }
async-io = "2.3.4"
async-executor = "1.13.0"
# http
http = "1.0.0"
# logging
log = "0.4.20"
# errors
anyhow = "1.0.89"

[dev-dependencies]
# logging
env_logger = "0.11.5"
# async macros
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
