[package]
name = "http_server"
version = "0.1.0"
edition = "2021"
[dependencies]
# async
futures-lite = { version =  "2.3.0" }
async-io = "2.3.4"
async-executor = { git = "https://github.com/smol-rs/async-executor.git", rev = "929dc5057f09a5a09ecbdebd9f73186aa5395a3e", features = ["main_executor"] }
# http
http = "1.0.0"
# logging
log = "0.4.20"
# errors
simple_error = { git = "https://github.com/brandonros/simple_error.git" }

[dev-dependencies]
# logging
env_logger = "0.11.5"
# async runtime
smol = { git = "https://github.com/brandonros/smol.git", rev = "e593cac01d2ee4a1241b8c292f61b8a6d800bb08" }
